--- a/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
+++ b/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
@@ -1,8 +1,12 @@
-<app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType" [isDataLoading]="isLoading" [exportFilename]="userType"
-    [globalFilterFields]="['orgName','name','email','loginId','mobileNo']" (edit)="onEditProduct($event)" [selection]="selectedUsers" [selectionMode]="userType === 'Dealer' ? 'single' : 'multiple'"
-    (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (linkRTO)="onLinkRTO($event)" />
+<app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType" [isDataLoading]="isLoading"
+    [exportFilename]="userType" [globalFilterFields]="['orgName','name','email','loginId','mobileNo']"
+    (edit)="onEditProduct($event)" [selection]="selectedUsers"
+    [selectionMode]="userType === 'Dealer' ? 'single' : 'multiple'" (delete)="onDeleteProduct($event)"
+    (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (linkRTO)="onLinkRTO($event)" />
 
-<app-generic-dialog [isValidated]="isValidated" [visible]="userDialog" [header]="userType" [width]="'800px'"
-    [modal]="true" [isEditing]="isEditing" [hideFields]="hideFields" [styleClass]="'p-fluid'" [fields]="fields"
-    [data]="user" [validationState]="validationState" (onHide)="onHideDialog($event)" (onSave)="onSaveProduct($event)"
+<app-generic-dialog [sourceHeight]="'25rem'" [sourceWidth]="'20rem'" [targetHeight]="'25rem'" [targetWidth]="'20rem'"
+    [breakpoint]="'1000px'" [isValidated]="isValidated" [visible]="userDialog" [header]="userType" [width]="'800px'"
+    [source]="unlinked" [target]="linked" [sourceHeader]="'Unlinked'" [targetHeader]="'Linked'" [modal]="true"
+    [isEditing]="isEditing" [hideFields]="hideFields" [styleClass]="'p-fluid'" [fields]="fields" [data]="user"
+    [validationState]="validationState" (onHide)="onHideDialog($event)" (onSave)="onSaveProduct($event)"
     (onInputTextChange)="onInputTextChange($event)" (onDialogDropdownChange)="onDialogDropDownChange($event)" />
