--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -87,15 +87,15 @@
                 }
                 @case('pickList') {
                 <ng-container>
-                    <p-pickList [source]="source" [target]="target" [sourceHeader]="sourceHeader" [targetHeader]="targetHeader"
-                        [dragdrop]="true" [responsive]="true" [showSourceControls]="false" [showTargetControls]="false"
-                        [sourceStyle]="{ height: sourceHeight,width:sourceWidth }"
+                    <p-pickList [source]="source" [target]="target" [sourceHeader]="sourceHeader"
+                        [targetHeader]="targetHeader" [dragdrop]="true" [responsive]="true" [showSourceControls]="false"
+                        [showTargetControls]="false" [sourceStyle]="{ height: sourceHeight,width:sourceWidth }"
                         [targetStyle]="{ height: targetHeight,width:targetWidth }" [breakpoint]="breakpoint">
                         <ng-template let-item pTemplate="item">
                             <div class="flex flex-wrap p-2 align-items-center gap-3">
                                 <div class="flex-1 flex flex-column gap-2">
                                     <span class="font-bold">
-                                        {{ item.rtoname }}
+                                        {{ item?.rtoName }}
                                     </span>
                                 </div>
                                 <span class="font-bold text-blue-500">
@@ -104,6 +104,12 @@
                             </div>
                         </ng-template>
                     </p-pickList>
+                </ng-container>
+                }
+                @case ('file') {
+                <ng-container>
+                    <p-fileUpload chooseLabel="Browse" mode="basic" name="file" accept=".txt" [maxFileSize]="1000000"
+                        [customUpload]="true" (onSelect)="onUpload($event, field)" [auto]="true"/>
                 </ng-container>
                 }
                 @case ('radiobutton') {
