--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -4,6 +4,7 @@
             <p-button [pTooltip]="'Create New'" tooltipPosition="bottom" [text]="true" [outlined]="true" icon="pi pi-plus" class="mr-2" (onClick)="onNewUser()" />
             <p-button [pTooltip]="'Link RTO'" tooltipPosition="bottom"
                       [text]="true" [outlined]="true" icon="pi pi-link" class="mr-2" (onClick)="onLinkRTO()" />
+                      <p-button [pTooltip]="'Bulk Upload'" tooltipPosition="bottom" [text]="true" [outlined]="true" icon="pi pi-cloud-upload" (onClick)="onUpload()" />
             <p-button [pTooltip]="'Export CSV'" tooltipPosition="bottom" [text]="true" [outlined]="true" icon="pi pi-print" (onClick)="onPrint()" />
         </div>
         <div class="p-toolbar-group-center">
@@ -45,7 +46,7 @@
                     }
                 </th>
                 @for (col of columns; track $index) {
-                <th pSortableColumn="{{ col.field }}" [style.minWidth]="col.minWidth || '15rem'">
+                <th pFrozenColumn [frozen]="col.frozen || false" alignFrozen="right" pSortableColumn="{{ col.field }}" [style.minWidth]="col.minWidth || '15rem'">
                     {{ col.header }} <p-sortIcon field="{{ col.field }}"></p-sortIcon>
                 </th>
                 }
@@ -66,13 +67,15 @@
                 </td>
                 @for (col of columns; track $index) {
                     @if(col.field === 'active'){
-                        <td>
+                        <td pFrozenColumn alignFrozen="right" [frozen]="col.frozen">
                             <p-tag [severity]="item[col.field] ? 'success' : 'danger'" 
                                    [value]="item[col.field] ? 'Active' : 'In Active'" />
                         </td>
                     }  @else {
                         @if(col.field === 'index') {
                             <td>{{ rowIndex + 1 }}</td>
+                        } @else if(col.nested) {
+                            <td>{{item[col.field][col.nestedName]}}</td>
                         } @else {
                             <td>{{item[col.field] || '-'}}</td>
                         }
