--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -5,5 +5,5 @@
 
 <app-generic-dialog [isValidated]="isValidated" [validationState]="validationState" [visible]="deviceDialog" [header]="'Device'"
      [width]="'600px'" [modal]="true" [isEditing]="isEditing"
-    [styleClass]="'p-fluid'" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
+    [styleClass]="''" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
     (onSave)="onSaveDevice($event)" (onInputTextChange)="onInputTextChange($event)" />
