--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,5 +1,5 @@
 <app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="['edit']"
-   [exportFilename]="'Device'" [globalFilterFields]="[]" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)"
+   [exportFilename]="'Device'" [globalFilterFields]="['imei','iccid','sno']" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)"
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (bulkUpload)="bulkUploadDevice($event)" />
 
 
