--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="flex align-items-center min-h-screen justify-content-center">
-    <div class="surface-card p-4 shadow-2 border-round w-full md:w-8 lg:w-4 xl:w-3">
+    <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-4 xl:w-3">
         <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
                 <img src="assets/images/logo.png" alt="logo" height="80" width="80"     />
@@ -52,8 +52,11 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <input id="reCAPTCHA" type="text" placeholder="Enter here" [(ngModel)]="userInput" pInputText
-                        class="w-full mb-3" [ngClass]="{'ng-invalid ng-dirty p-shake': captchaError}">
+                    <p-iconField iconPosition="right">
+                        <p-inputIcon [styleClass]="captchaImageClass" />
+                        <input id="reCAPTCHA" type="text" placeholder="Enter here" (keyup)="onCaptchaInputChange($event)" [(ngModel)]="userInput" pInputText
+                            class="w-full mb-3" [ngClass]="{'ng-invalid ng-dirty p-shake': captchaError}" />
+                    </p-iconField>
                 </div>
             </div>
 
