--- a/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
+++ b/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
@@ -1,7 +1,7 @@
 <app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType" [isDataLoading]="isLoading"
     [exportFilename]="userType" [globalFilterFields]="['orgName','name','email','loginId','mobileNo']"
     (edit)="onEditProduct($event)" [selection]="selectedUsers"
-    [selectionMode]="userType === 'Dealer' ? 'single' : 'multiple'" (delete)="onDeleteProduct($event)"
+    [selectionMode]="userType === 'Dealer' ? 'single' : 'none'" (delete)="onDeleteProduct($event)"
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (linkRTO)="onLinkRTO($event)" />
 
 <app-generic-dialog [sourceHeight]="'25rem'" [sourceWidth]="'20rem'" [targetHeight]="'25rem'" [targetWidth]="'20rem'"
