--- a/src/app/pages/main/management/rto/rto.component.html
+++ b/src/app/pages/main/management/rto/rto.component.html
@@ -1,5 +1,5 @@
 <app-generic-table [data]="rtos" [columns]="columns" [rows]="10" [header]="'RTO'" [isDataLoading]="isLoading" [toolbarRightActions]="toolbarRightActions"
-   [exportFilename]="'rtos'" [globalFilterFields]="['rtocode','rtoname','state']" (edit)="onEditState($event)" (delete)="onDeleteProduct($event)"
+   [exportFilename]="'rtos'" [globalFilterFields]="['rtocode','rtoname','state']" (edit)="onEditState($event)" (delete)="onDeleteProduct($event)" [selectionMode]="'none'"
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (dropdown)="onToolBarDropDownChange($event)" />
 
 
