--- a/src/app/pages/main/management/state/state.component.html
+++ b/src/app/pages/main/management/state/state.component.html
@@ -1,6 +1,6 @@
 <app-generic-table [data]="states" [columns]="columns" [rows]="10" [header]="'States'" [isDataLoading]="isLoading"
    [exportFilename]="'states'" [globalFilterFields]="['statecode','statename']" (edit)="onEditState($event)" (delete)="onDeleteProduct($event)"
-    (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
+    (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" [selectionMode]="'none'" />
 
 
 <app-generic-dialog [visible]="stateDialog" [header]="'States'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
