--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,7 +1,7 @@
-<app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="['edit']"
+<app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="actions"
    [exportFilename]="'Device'" [globalFilterFields]="['imei','iccid','sno']" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)" [selectionMode]="'none'"
    (sampleBulkUpload)="exportSampleBulkUpload($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (bulkUpload)="bulkUploadDevice($event)"
-   (transferInventory)="onTransferInventory($event)" />
+   (transferInventory)="onTransferInventory($event)" (activate)="onActivate($event)" />
 
 
 <app-generic-dialog [isValidated]="isValidated" [validationState]="validationState" [visible]="deviceDialog"
