--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -105,7 +105,7 @@
                     @if(action === 'activate') {
                         @if(item.activationStatusText !== 'Active') {
                             <i [pTooltip]="'Activate'" tooltipPosition="bottom" (click)="onActivate($event,item)"
-                                class="pi pi-eject ml-4 text-sm text-green-500 cursor-pointer"></i>
+                                class="pi pi-eject ml-4 text-sm text-primary-500 cursor-pointer"></i>
                         }
                     }
                     }
