--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,10 +1,11 @@
 <app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="actions"
    [exportFilename]="'Device'" [globalFilterFields]="['imei','iccid','sno']" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)" [selectionMode]="'none'"
    (sampleBulkUpload)="exportSampleBulkUpload($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (bulkUpload)="bulkUploadDevice($event)"
-   (transferInventory)="onTransferInventory($event)" (activate)="onActivate($event)" />
+   (transferInventory)="onTransferInventory($event)" (activate)="onActivate($event)" (fitment)="onFitment($event)" />
 
 
-<app-generic-dialog [isValidated]="isValidated" [validationState]="validationState" [visible]="deviceDialog"
+<app-generic-dialog [stepFormFields]="stepFormFields" [isStepForm]="accesStepForm" [isValidated]="isValidated" [validationState]="validationState" [visible]="deviceDialog"
      [header]="'Device'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
     [styleClass]="''" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
-    (onSave)="onSaveDevice($event)" (onInputTextChange)="onInputTextChange($event)" />
+    (onSave)="onSaveDevice($event)" (onInputTextChange)="onInputTextChange($event)" 
+    (stepperDropDownChange)="stepperDropdwonChange($event)" />
