--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -8,4 +8,4 @@
      [header]="'Device'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
     [styleClass]="''" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
     (onSave)="onSaveDevice($event)" (onInputTextChange)="onInputTextChange($event)" 
-    (stepperDropDownChange)="stepperDropdwonChange($event)" />
+    (stepperDropDownChange)="stepperDropdwonChange($event)" (stepperInputTextChange)="stepperInputTextChange($event)" />
